# OSVMP2

./: CMakeLists.txt  README.md  check_dependency.py  env_osvmp2.sh  install_with_conda_pip.sh
examples/: hf_cpu.inp  hf_gpu.inp  mbe3osvmp2_cpu.inp  mbe3osvmp2_gpu.inp  water8.xyz
osvmp2/: __config__.py  ga_addons.py  get_mol_special.py  hf_ene.py  hf_grad.py  int_2c2e.py  int_3c2e.py  int_prescreen.py  mp2_ene.py  mp2_grad.py  mpi_addons.py  opt_df.py  osv_grad.py  osv_mbe.py  osvutil.py  scanner.py
osvmp2/berny/: berny.py  berny_solver.py
osvmp2/geometric/: __config__.py  __init__.py  _version.py  engine.py  geometric_solver.py  internal.py  mole.py  optimize.py  rotate.py  run_json.py
osvmp2/gpu/: cuda_utils.py  hf_ene_cuda.py  int4c_jk_cuda.py  int4c_md_j_cuda.py  int_3c2e_cuda.py  mp2_ene_cuda.py  rand_svd_cuda.py  sparse_int3c2e_cuda.py
osvmp2/loc/: CPL.py  CPL_meta.py  CPL_mulliken.py  ciah.py  data_elements.py  loc_addons.py  loc_jacobi.py  nao.py  orth.py
osvmp2/loc/hirshfeld/: hirshfeld2cm5.py  hirshfeld_chg.py  spherical_atom_dft.py  spherical_atom_hf.py
osvmp2/md/: driver.py  gen_input.py  md_initializer.py  md_openmm.py  md_solver.py  split_traj.py
osvmp2/md/data_analysis/: IR_DACF.py  VACF_py3.py  calc-ir-spectra.py  ir_ase.py  merge.py  plot_ene_drift.py  plot_vdos.py  properties.py  pydos.py  replace.py  rpdf.py  temp_drift.py
osvmp2/md/gaus_ipi/: bash_md.slurm  driver.py  gen_input.py  md_initializer.py  o2h.xyz  run.sh  template.gjf
osvmp2/mm/: criegee_ch2o2_water100.xyz  mm_eg.py  qmmm.py  solvation.py  xyz2pdb.py
osvmp2/mm/data/: auto_ff.py  blank.xml  criegee.xml  criegee_list.txt  gen_blankff.py
osvmp2/mm/data/backup/: old_criegee.xyz
osvmp2/pbc/: gamma_hf_ene.py  gamma_int_2c2e.py  gamma_int_3c2e.py
osvmp2/pbc/gpu/: gamma_hf_ene_cuda.py  gamma_int_3c2e_cuda.py
src/: CMakeLists.txt
src/cpp/: linalgUtils.cpp  localization.cpp  randSvd.cpp
src/cuda/: bak_localizationCuda.cu  int3c2eCuda.cu  int4cJKCuda.cu  linalgUtilsCuda.cu  localizationCuda.cu  osvMp2Cuda.cu  pbcIntCuda.cu  randSvdCuda.cu
src/cuda/int4cMdJCuda/: boys.cu  compile.sh  md_contract_j.cu  md_j_driver.cu  md_pairdata.c  unrolled_md_j.cu  unrolled_md_j_4dm.cu  vhf.cuh
src/include/cpp/: linalgUtils.h
src/include/cuda/: cupyUtils.cuh  linalgUtils.cuh
